<resources>

    <string name="full_app_name" translatable="false">No Man\'s Wallpaper</string>
    <string name="adriel_cafe" translatable="false">Adriel Café</string>
    <string name="android_developer" translatable="false">Android Developer</string>
    <string name="adrielcafe_nomanswallpaperapp" translatable="false">adrielcafe/NoMansWallpaperApp</string>
    <string name="oops" translatable="false">Oops…</string>

    <string name="hi_there_are_you_enjoying_the_app">Hi there! Are you enjoying the app? I hope so 😊\n\nIf you have any question, suggestion or want to contribute (new content, found a bug, translation…) please contact me using the links below.</string>
    <string name="this_app_is_open_source">This app is open source, contributions are very welcome!</string>
    <string name="update_available">Update Available</string>
    <string name="new_version_available_update_now">A new version is available. Do you want to update now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open</string>
    <string name="open_menu">Open menu</string>
    <string name="close_menu">Close menu</string>
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="buy_me_coffee">Buy Me A Coffee</string>
    <string name="share">Share</string>
    <string name="rate_review">Rate &amp; Review</string>
    <string name="you_should_try">You should try No Man\'s Wallpaper!</string>
    <string name="thanks_for_support">Thank you for your support! ☕ 😋</string>
    <string name="later">Later</string>
    <string name="donate">Donate</string>
    <string name="wallpaper_set">Wallpaper set!</string>
    <string name="saved_in_gallery">Saved in your gallery</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="set_wallpaper">Set as Wallpaper</string>
    <string name="set_as">Set as…</string>
    <string name="share_with">Share with…</string>
    <string name="download">Download</string>
    <string name="permissions_needed">Please give permission to use this feature</string>
    <string name="allow">Allow</string>
    <string name="connect_internet">Connect to the internet</string>
    <string name="copy_url">Copy URL</string>
    <string name="url_copied_clipboard">URL copied to Clipboard</string>
    <string name="downloading_wallpaper">Downloading wallpaper…</string>
    <string name="app_content_free">This app and all its content are free.\nIf you\'re enjoying and want to support the development, feel free to buy me a ☕.</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="settings">Settings</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_two_weeks">Every two weeks</string>
    <string name="every_month">Every month</string>
    <string name="auto_change_wallpaper">Auto change wallpaper (BETA)</string>
    <string name="enabled">Enabled</string>
    <string name="frequency">Frequency</string>
    <string name="notifications">Notifications</string>
    <string name="show_notification">Show notification</string>
    <string name="new_wallpapers">New wallpapers</string>
    <string name="new_wallpaper_set">A new wallpaper has been set</string>
    <string name="general">General</string>
    <string name="high_quality_preview">High quality preview</string>
    <string name="added_favorites">Added to Favorites</string>
    <string name="removed_favorites">Removed from Favorites</string>
    <string name="only_favorites">Only favorites</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="filter">Filter</string>
    <string name="no_wallpaper_found">No wallpaper found</string>
    <string name="random">Random</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string-array name="preference_auto_set_entries">
        <item>@string/every_day</item>
        <item>@string/every_week</item>
        <item>@string/every_two_weeks</item>
        <item>@string/every_month</item>
    </string-array>
    <string-array name="preference_auto_set_values">
        <item>1</item>
        <item>7</item>
        <item>14</item>
        <item>30</item>
    </string-array>

</resources>